--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3758,10 +3758,10 @@ input, select, textarea {
 	#main {
 		background-color: #ffffff;
 		position: relative;
-		margin: 0 auto;
-		width: calc(100% - 4rem);
-		max-width: 72rem;
-		z-index: 2;
+    		margin: 0;
+    		width: 100%;
+    		max-width: 100%;
+    		z-index: 2;
 	}
 
 		#main > * {
