--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3759,8 +3759,8 @@ input, select, textarea {
 		background-color: #ffffff;
 		position: relative;
     		margin: 0;
-    		width: 100%;
-    		max-width: 100%;
+    		width: calc(100% - 4rem);
+    		max-width: 72rem;
     		z-index: 2;
 	}
 
