--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3756,11 +3756,14 @@ input, select, textarea {
 /* Main */
 
 	#main {
-		background-color: #ffffff;
+
 		position: relative;
-    		margin: 0;
     		width: calc(100% - 4rem);
-    		max-width: 72rem;
+		max-width: 1100px; /* Adjust width */
+    		margin: 0 auto; /* Center the content */
+   		padding: 20px;
+    		background-color: #ffffff; /* Ensure white background */
+    		display: block;
     		z-index: 2;
 	}
 
