--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3619,12 +3619,12 @@ input, select, textarea {
 		background: rgba(255, 255, 255, 0.175);
 		height: 4rem;
 		line-height: 4rem;
-		margin: 0 ;
+		margin: 0 auto ;
 		overflow: hidden;
 		padding: 0 2rem 0 0;
 		position: relative;
 		width: 100%;
-		max-width: 100%;
+		max-width: 72rem;
 		z-index: 2;
 	}
 
